--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"last_password": "123", "last_private_key_filename": "KFC.pfx", "last_cert_filename": "2c2p-jwt-default-public.crt"}
+{"last_password": "123", "last_private_key_filename": "Private key.pfx", "last_cert_filename": "Public key.cer"}
