--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pyasn1==0.6.1
 pycparser==2.22
 pydeck==0.9.1
 PyJWT==2.10.1
+pyperclip==1.9.0
 python-dateutil==2.9.0.post0
 python-jose==3.5.0
 pytz==2025.2
@@ -38,6 +39,7 @@ rsa==4.9.1
 six==1.17.0
 smmap==5.0.2
 streamlit==1.45.1
+streamlit-ace==0.1.1
 tenacity==9.1.2
 toml==0.10.2
 tornado==6.5.1
