--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"last_password": "123", "last_private_key_filename": "123.pfx", "last_cert_filename": "abc.cer"}
+{"last_password": "123", "last_private_key_filename": "KeyPaymentAction/123.pfx", "last_cert_filename": "KeyPaymentAction/abc.cer", "use_custom_keys": false}
