--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.5.0
 attrs==25.3.0
 Authlib==1.6.0
+beautifulsoup4==4.12.3
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
@@ -22,6 +23,7 @@ numpy==2.3.0
 packaging==24.2
 pandas==2.3.0
 pillow==11.2.1
+plotly==5.24.1
 protobuf==6.31.1
 pyarrow==20.0.0
 pyasn1==0.6.1
